add blinks remaining time
